--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         <p> Hola, esta es mi primer pagina en html. Solo es una pagina de prueba </p>
+        <p> Esta es la segunda actualizacion </p>
     </body>
 </html>
