--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <p> Hola, esta es mi primer pagina en html. Solo es una pagina de prueba </p>
         <p> Esta es la segunda actualizacion </p>
+        <p> Mi Tercer parrafor de la clase Practica 2 Programación con control de versiones CVS I </p>
     </body>
 </html>
