--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <link href="CSS/estilos.css" rel="stylesheet" type="text/css">
+
+
     <head>
         <title> Mi Primer PAgina </title>
     </head>
